Added %(EXTRA_BLOCKS)s and HTML5 routing to nginx; fixed chown; removed some debug prints

--- a/offregister_app_push/conf/nginx.sites-available.conf
+++ b/offregister_app_push/conf/nginx.sites-available.conf
@@ -3,9 +3,11 @@ server {
     listen %(NGINX_PORT)d;
     server_name %(DNS_NAMES)s;
 
+%(EXTRA_BLOCKS)s
 %(PROXY_BLOCKS)s
 
     location %(WWWPATH)s {
+        try_files $uri$args $uri$args/ /index.html; # Useful for permalinks to SPA (Angular &etc; HTML5 routing)
         root   %(WWWROOT)s;
         index  index.html index.htm;
     }
