--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-fabric
+fabric==1.14.0
 https://api.github.com/repos/offscale/offregister_fab_utils/zipball#egg=offregister_fab_utils
 https://api.github.com/repos/offscale/offregister-node/zipball#egg=offregister_node
