--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-fab-classic
+fabric2
 https://api.github.com/repos/offscale/offregister-fab-utils/zipball#egg=offregister_fab_utils
 https://api.github.com/repos/offscale/offregister-node/zipball#egg=offregister_node
